Setup a composer script to run the tests

--- a/composer.json
+++ b/composer.json
@@ -17,5 +17,8 @@
             "email": "renanlvendramini@gmail.com"
         }
     ],
-    "minimum-stability": "stable"
+    "minimum-stability": "stable",
+    "scripts": {
+        "test": "./vendor/bin/phpunit --testdox tests"
+    }
 }
