--- a/composer.json
+++ b/composer.json
@@ -20,5 +20,8 @@
     "minimum-stability": "stable",
     "scripts": {
         "test": "./vendor/bin/phpunit --testdox tests"
+    },
+    "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.47"
     }
 }
