--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
     ],
     "minimum-stability": "stable",
     "scripts": {
-        "test": "./vendor/bin/phpunit --testdox tests"
+        "test": "./vendor/bin/phpunit --testdox tests",
+        "sniffer": "./vendor/bin/php-cs-fixer fix tests"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.47"
